<resources>
    <string name="app_name">朝夕</string>
    <string name="follow_attraction">关注地点</string>
    <string name="nav_map">地图</string>
    <string name="nav_discover">发现</string>
    <string name="nav_message">消息</string>
    <string name="nav_user">我的</string>
    <string name="follow_topic">关注话题</string>
    <string name="cd_daynight">深色模式</string>
    <string name="cd_settings">设置</string>
    <string name="entry_home_page">个人主页</string>
    <string name="cd_poi_icon">POI图标</string>
    <string name="cancel">取消</string>
    <string name="fragement_message_title">消息</string>
    <string name="cd_clear_unread">清除未读</string>
    <string name="post_detail_title">帖子详情</string>
    <string name="back">返回</string>
    <string name="more">更多</string>
    <string name="sort">排序</string>
    <string name="cd_home_page_background">个人主页背景</string>
    <string name="zero">0</string>
    <string name="filter">筛选</string>
    <string name="comment_detail_title">回复详情</string>
    <string-array name="following_tags">
        <item>全部</item>
        <item>关注的人</item>
        <item>关注的地点</item>
        <item>关注的话题</item>
    </string-array>

    <string-array name="english_week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
</resources>
