<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map"
        android:checked="true"
        android:icon="@drawable/ic_light_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/discover"
        android:icon="@drawable/ic_light_navigation"
        android:title="@string/nav_discover" />
    <!--    <item-->
    <!--        android:id="@+id/add"-->
    <!--        android:icon="@drawable/ic_light_plus"-->
    <!--        android:title="" />-->
    <item
        android:id="@+id/message"
        android:icon="@drawable/ic_light_message"
        android:title="@string/nav_message" />
    <item
        android:id="@+id/personal"
        android:icon="@drawable/ic_light_user"
        android:title="@string/nav_user" />
</menu>