<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/switch_daynight"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_daynight"
            android:src="@drawable/ic_light_daynight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/user_settings"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/user_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_settings"
            android:src="@drawable/ic_light_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/fragment_user_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/user_titlebar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_user_avatar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_card_round"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/img_default_avatar"
                    app:civ_border_width="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/username"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/username_sample"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="@id/avatar"
                    app:layout_constraintStart_toEndOf="@id/avatar"
                    app:layout_constraintTop_toTopOf="@id/avatar" />

                <Button
                    android:id="@+id/entry_home_page"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/entry_home_page"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="@id/avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/avatar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_user_entry_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_card_round"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_avatar_layout">

                <com.cloudchewie.ui.EntryItem
                    android:id="@+id/user_entry_creation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:entry_item_icon="@drawable/ic_light_edit"
                    app:entry_item_icon_size="40dp"
                    app:entry_item_text="我的创作"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/user_entry_following"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.cloudchewie.ui.EntryItem
                    android:id="@+id/user_entry_following"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:entry_item_icon="@drawable/ic_light_heart"
                    app:entry_item_icon_size="40dp"
                    app:entry_item_text="我的关注"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/user_entry_collection"
                    app:layout_constraintStart_toEndOf="@id/user_entry_creation"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.cloudchewie.ui.EntryItem
                    android:id="@+id/user_entry_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:entry_item_icon="@drawable/ic_light_star"
                    app:entry_item_icon_size="40dp"
                    app:entry_item_text="我的收藏"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/user_entry_footprint"
                    app:layout_constraintStart_toEndOf="@id/user_entry_following"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.cloudchewie.ui.EntryItem
                    android:id="@+id/user_entry_footprint"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:entry_item_icon="@drawable/ic_light_clock"
                    app:entry_item_icon_size="40dp"
                    app:entry_item_text="我的足迹"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/user_entry_collection"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</RelativeLayout>