<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_topic_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_prominent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_topic_detail_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageButton
            android:id="@+id/activity_topic_detail_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:scaleType="centerInside"
            android:src="@drawable/ic_light_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/activity_topic_detail_more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/more"
            android:scaleType="centerInside"
            android:src="@drawable/ic_light_ellipsis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@color/color_prominent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/activity_topic_detail_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_prominent"
            app:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_topic_detail_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/color_prominent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/activity_topic_detail_title_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/activity_topic_detail_follow"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/activity_topic_detail_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:textColor="@color/text_color_white"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                tools:text="占位符占位符占位符占位符占位符占位符占位符占位符占位符占位符占位符占位符" />

                            <TextView
                                android:id="@+id/activity_topic_detail_hotvalue"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textColor="@color/text_color_light_gray"
                                tools:text="占位符占位符占位符占位符占位符占位符占位符占位符占位符占位符占位符占位符" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/activity_topic_detail_follow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/shape_button"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:text="@string/follow_topic"
                            android:textColor="@color/text_color_white"
                            android:textSize="12sp"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/shape_card_transparent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/activity_topic_detail_describe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="3"
                            android:textColor="@color/text_color_white"
                            android:textSize="12sp"
                            tools:text="大家可以在这里尽情分享我们的生活" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_topic_detail_content_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/shape_content_top_radius">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/activity_topic_detail_content_tab_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tabBackground="@android:color/transparent"
                    app:tabGravity="center"
                    app:tabIndicator="@drawable/shape_tab_indicator"
                    app:tabIndicatorColor="@color/color_prominent"
                    app:tabIndicatorFullWidth="false"
                    app:tabMode="fixed"
                    app:tabRippleColor="@android:color/transparent"
                    app:tabSelectedTextColor="@color/color_prominent"
                    app:tabTextAppearance="@style/SmallTabLayoutTextStyle"
                    app:tabTextColor="@color/color_accent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape_button_dark"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/filter"
                    android:textColor="@color/color_accent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_topic_detail_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/activity_topic_detail_content_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/color_divider"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/activity_topic_detail_content_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_topic_detail_titlebar_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/content_background"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/activity_topic_detail_back_2"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:scaleType="centerInside"
            android:src="@drawable/ic_light_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/activity_topic_detail_follow_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_button_dark"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/follow_topic"
            android:textColor="@color/text_color_white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/activity_topic_detail_small_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:maxEms="6"
            android:singleLine="true"
            android:textColor="@color/color_accent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/activity_topic_detail_content_divider_2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_divider"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
